--- a/public/static/sass/views/shared/animations.sass
+++ b/public/static/sass/views/shared/animations.sass
@@ -36,8 +36,14 @@
 
 @keyframes search-box-close
 	0%
-		width: 250px
+		width: 400px
 		height: 30px
+
+	50%
+		width: 200px
+
+	75%
+		width: 100px
 
 	99%
 		width: 21px
