--- a/public/views/about/about.ejs
+++ b/public/views/about/about.ejs
@@ -172,6 +172,7 @@
 			</section>
 		</main>
 
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.js'></script>
 		<script src='../index.js'></script>
 	</body>
 </html>
