--- a/public/static/sass/views/pages/about/header.sass
+++ b/public/static/sass/views/pages/about/header.sass
@@ -6,6 +6,13 @@
 	height: 400px
 	width: 100%
 
+	canvas
+		position: absolute
+		top: 0 
+		left: 0
+		width: 100%
+		height: 100%
+
 .about-header-image
 	height: 100%
 	width: 100%
