Created a small video player so I can customize it how I want

--- a/public/static/sass/views/pages/about/header.sass
+++ b/public/static/sass/views/pages/about/header.sass
@@ -13,11 +13,6 @@
 		width: 100%
 		height: 100%
 
-.about-header-image
-	height: 100%
-	width: 100%
-	background: rgba(0,0,0,0.12)
-
 .about-header-overlay
 	display: flex
 	flex-direction: column
@@ -29,10 +24,12 @@
 	width: 100%
 	height: 100%
 	text-align: center
+	z-index: 20
 
 	h1
 		@include lato()
 		font-weight: 300
 		font-size: 48px
-		letter-spacing: 3px
+		letter-spacing: 4px
+		color: #fff
 
