--- a/public/static/sass/views/pages/about/media.sass
+++ b/public/static/sass/views/pages/about/media.sass
@@ -2,6 +2,7 @@
 	padding: 50px 0
 	border-bottom: 1px solid rgba(0,0,0,0.12)
 
+
 .about-media-wrapper
 	display: flex
 	flex-direction: column
@@ -13,30 +14,36 @@
 	padding: 10px
 	margin-bottom: 40px
 	padding: 15px 20px
+	background: #fff
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.23)
 
 	h3
 		@include lato()
-		font-weight: 400
+		font-weight: 300
 		letter-spacing: 2px
-		font-size: 20px
+		font-size: 26px
 		margin-bottom: 15px
 
 	p
-		@include lato()
-		font-weight: 300
+		@include open()
+		font-weight: normal
 		font-size: 15px
 		letter-spacing: 2px
 		line-height: 25px
+		color: #7d7d7d
 		margin-left: 15px
 		margin-bottom: 30px
 
 
 .about-media-video
-	height: 250px
+	height: 320px
 	width: 100%
 	padding: 10px
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.23)
+
+.about-video
+	height: 100%
+	width: 100%
 
 .media-play-button
 	display: flex
