--- a/public/views/about/about.ejs
+++ b/public/views/about/about.ejs
@@ -16,7 +16,7 @@
 			<section class='about-header'>
 				<div class='about-header-image'></div>
 				<div class='about-header-overlay'>
-					<h1>Some Title Text</h1>
+					<h1>About Us</h1>
 				</div>
 			</section>
 
@@ -49,8 +49,16 @@
 					</div>
 
 					<div class='about-media-video'>
-						<div class='media-play-button'>
-							<div></div>
+						<video id='about-video' class='about-video'>
+							<source src='../static/images/cats.mp4' type='video/mp4'>
+						</video>
+
+						<div id='video-controls' class='video-controls'>
+							<button type='button' class='play-button'>Play</button>
+							<input type='range' class='seek-bar' value='0'>
+							<button type='button' class='mute'>Mute</button>
+							<input type='range' class ='volume-bar' min='0' max='1' step='0.1' value='1'>
+							<button type='button' class='full-screen'>Full Screen</button>
 						</div>
 					</div>
 				</div>
@@ -172,7 +180,7 @@
 			</section>
 		</main>
 
-		<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.js'></script>
+		<script src='../vendors/three.min.js'></script>
 		<script src='../index.js'></script>
 	</body>
 </html>
