Changed the slider input to a div and am updating the width of it for video progress

--- a/public/static/sass/views/pages/about/header.sass
+++ b/public/static/sass/views/pages/about/header.sass
@@ -33,3 +33,47 @@
 		letter-spacing: 4px
 		color: #fff
 
+@media screen and (min-width: 600px)
+	.about-header
+		height: 450px
+
+	.about-header-overlay
+		h1
+			font-size: 50px
+			letter-spacing: 6px
+
+@media screen and (min-width: 1000px)
+	.about-header
+		height: 500px
+
+	.about-header-overlay
+		h1
+			font-size: 60px
+
+
+@media screen and (min-width: 1200px)
+	.about-header
+		height: 550px
+
+	.about-header-overlay
+		h1
+			font-size: 65px
+			letter-spacing: 7px
+
+@media screen and (min-width: 1400px)
+	.about-header
+		height: 600px
+
+	.about-header-overlay
+		h1
+			font-size: 72px
+			letter-spacing: 8px
+
+@media screen and (min-width: 1800px)
+	.about-header
+		height: 650px
+
+	.about-header-overlay
+		h1
+			font-size: 90px
+			letter-spacing: 10px
