--- a/public/static/sass/views/pages/about/story.sass
+++ b/public/static/sass/views/pages/about/story.sass
@@ -84,14 +84,26 @@
 	.about-story-title
 		width: 35%
 
+		> div
+			width: 52%
+
 	.about-story-text
 		width: 65%
 
 @media screen and (min-width: 1350px)
 	.about-story-text
+		width: 55%
+
 		blockquote
 			margin-bottom: 70px
 			font-size: 18px
+			line-height: 42px
 
 		p
 			line-height: 32px
+
+@media screen and (min-width: 1800px)
+	.about-story-text
+		blockquote
+			font-size: 19px
+			line-height: 45px
