--- a/public/static/icons/style.css
+++ b/public/static/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?261gf5');
-  src:  url('fonts/icomoon.eot?261gf5#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?261gf5') format('truetype'),
-    url('fonts/icomoon.woff?261gf5') format('woff'),
-    url('fonts/icomoon.svg?261gf5#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?o0jkhg');
+  src:  url('fonts/icomoon.eot?o0jkhg#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?o0jkhg') format('truetype'),
+    url('fonts/icomoon.woff?o0jkhg') format('woff'),
+    url('fonts/icomoon.svg?o0jkhg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,20 +24,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-phone:before {
-  content: "\e901";
-}
-.icon-twitter:before {
-  content: "\e902";
-}
-.icon-hourglass:before {
-  content: "\e01f";
-}
 .icon-megaphone:before {
   content: "\e021";
 }
-.icon-streetsign:before {
-  content: "\e029";
+.icon-trophy:before {
+  content: "\e023";
+}
+.icon-envelope:before {
+  content: "\e028";
 }
 .icon-lightbulb:before {
   content: "\e030";
@@ -48,31 +42,94 @@
 .icon-genius:before {
   content: "\e046";
 }
-.icon-mail-envelope-closed:before {
-  content: "\e900";
+.icon-arrow_forward:before {
+  content: "\e5c8";
 }
-.icon-expand_less:before {
-  content: "\e5ce";
+.icon-phone:before {
+  content: "\e0cd";
 }
-.icon-expand_more:before {
-  content: "\e5cf";
+.icon-chat_bubble_outline:before {
+  content: "\e0cb";
+}
+.icon-check:before {
+  content: "\e5ca";
+}
+.icon-close:before {
+  content: "\e5cd";
+}
+.icon-delete:before {
+  content: "\e872";
+}
+.icon-exposure_neg_1:before {
+  content: "\e3cb";
+}
+.icon-exposure_plus_1:before {
+  content: "\e3cd";
+}
+.icon-favorite_border:before {
+  content: "\e87e";
+}
+.icon-keyboard_arrow_down:before {
+  content: "\e313";
+}
+.icon-keyboard_arrow_left:before {
+  content: "\e314";
 }
 .icon-keyboard_arrow_right:before {
   content: "\e315";
 }
+.icon-keyboard_arrow_up:before {
+  content: "\e316";
+}
+.icon-mail_outline:before {
+  content: "\e0e1";
+}
 .icon-menu:before {
   content: "\e5d2";
 }
-.icon-search:before {
-  content: "\e8b6";
+.icon-more_horiz:before {
+  content: "\e5d3";
 }
-.icon-sentiment_satisfied:before {
-  content: "\e813";
+.icon-pause:before {
+  content: "\e034";
+}
+.icon-play_arrow:before {
+  content: "\e037";
+}
+.icon-send:before {
+  content: "\e163";
+}
+.icon-settings:before {
+  content: "\e8b8";
+}
+.icon-star_border:before {
+  content: "\e83a";
+}
+.icon-stop:before {
+  content: "\e047";
+}
+.icon-thumb_down:before {
+  content: "\e8db";
+}
+.icon-thumb_up:before {
+  content: "\e8dc";
+}
+.icon-volume_off:before {
+  content: "\e04f";
+}
+.icon-volume_up:before {
+  content: "\e050";
+}
+.icon-zoom_out_map:before {
+  content: "\e56b";
 }
 .icon-facebook:before {
   content: "\ea90";
 }
 .icon-instagram:before {
   content: "\ea92";
+}
+.icon-twitter:before {
+  content: "\ea96";
 }
 
