--- a/public/views/about/about.ejs
+++ b/public/views/about/about.ejs
@@ -54,11 +54,21 @@
 						</video>
 
 						<div id='video-controls' class='video-controls'>
-							<button type='button' class='play-button'>Play</button>
 							<input type='range' class='seek-bar' value='0'>
-							<button type='button' class='mute'>Mute</button>
-							<input type='range' class ='volume-bar' min='0' max='1' step='0.1' value='1'>
-							<button type='button' class='full-screen'>Full Screen</button>
+							<div class='fine-controls'>
+								<button type='button' class='play-button' aria-label='play video'>
+									<span class='icon-play_arrow'></span>
+								</button>
+								<button type='button' class='mute'>Mute</button>
+								<div class='progress-container'>
+									<div class='progress-box'>
+										<span class='play-progress'></span>
+									</div>
+								</div>
+								<button type='button' class='full-screen' aria-label='make video full-screen'>
+									<span class='icon-zoom_out_map'></span>
+								</button>
+							</div>
 						</div>
 					</div>
 				</div>
