--- a/public/static/sass/views/pages/about/media.sass
+++ b/public/static/sass/views/pages/about/media.sass
@@ -47,43 +47,26 @@
 
 .video-controls
 	display: flex
-	flex-direction: column
-
-.seek-bar
-	width: 100%
-
-.progress-container
-	width: 120px
-	height: 30px
-
-.progress-box
-	width: 120px
-	height: 30px
-	background: rgba(0,0,0,0.3)
-
-.play-progress
-	display: inline-block
-	height: 30px
-	background: rgba(0,0,0,0.6)
-	width: 0
-
-.fine-controls
-	display: flex
 	align-items: center
-	width: 100%
-	padding-top: 15px
 
 	button
 		height: 35px
 		width: 35px
+		margin-right: 10px
 		border-radius: 50%
 		border: none
 		outline: none
-		margin-right: 15px
+	.mute
+		margin-right: 4px
 
+.seek-bar
+	width: 40%
+	margin-right: 10px
 
-	.volume-bar
-		margin-right: 10px
+.volume-button
+	width: 20%
+	margin-right: 10px
+
 
 
 .media-play-button
