--- a/public/views/about/about.ejs
+++ b/public/views/about/about.ejs
@@ -54,21 +54,17 @@
 						</video>
 
 						<div id='video-controls' class='video-controls'>
+							<button type='button' class='play-button' aria-label='play video'>
+								<span class='icon-play_arrow'></span>
+							</button>
 							<input type='range' class='seek-bar' value='0'>
-							<div class='fine-controls'>
-								<button type='button' class='play-button' aria-label='play video'>
-									<span class='icon-play_arrow'></span>
-								</button>
-								<button type='button' class='mute'>Mute</button>
-								<div class='progress-container'>
-									<div class='progress-box'>
-										<span class='play-progress'></span>
-									</div>
-								</div>
-								<button type='button' class='full-screen' aria-label='make video full-screen'>
-									<span class='icon-zoom_out_map'></span>
-								</button>
-							</div>
+							<button type='button' class='mute' aria-label='mute video'>
+								<span class='icon-volume_up'></span>
+							</button>
+							<input type='range' class='volume-button' min='0' max='1' step='0.1' value='0.5'>
+							<button type='button' class='full-screen' aria-label='make video full-screen'>
+								<span class='icon-zoom_out_map'></span>
+							</button>
 						</div>
 					</div>
 				</div>
