Added some more stylings for the about page

--- a/public/static/sass/views/pages/about/media.sass
+++ b/public/static/sass/views/pages/about/media.sass
@@ -111,6 +111,11 @@
 			height: 80px
 			width: 80px
 
+@media screen and (min-width: 800px)
+	.video-controls
+		width: 70%
+		margin: 0 auto
+
 @media screen and (min-width: 870px)
 	.about-media
 		padding: 90px 0
