--- a/public/views/about/about.ejs
+++ b/public/views/about/about.ejs
@@ -74,9 +74,16 @@
 				<div class='about-timeline-large'>
 					<div class='about-timeline-row-left'>
 						<div>
-							<div class='timeline-widget'></div>
+							<div class='timeline-widget'>
+								<img src='../static/images/store1.png' class='timeline-image'>
+								<div class='timeline-bottom'>
+									<p>We will put something here about the business. This is a placeholder text right now</p>
+								</div>
+							</div>
 							<div class='timeline-horizontal-line'></div>
-							<div class='timeline-marker'></div>
+							<div class='timeline-marker'>
+								<p>Date</p>
+							</div>
 							<div class='timeline-vertical-line'></div>
 						</div>
 					</div>
@@ -84,14 +91,26 @@
 					<div class='about-timeline-row-right'>
 						<div>
 							<div class='timeline-horizontal-line'></div>						
-							<div class='timeline-widget'></div>
-							<div class='timeline-marker'></div>
+							<div class='timeline-widget'>
+								<img src='../static/images/store2.png' class='timeline-image'>
+								<div class='timeline-bottom'>
+									<p>We will put something here about the business. This is a placeholder text right now</p>
+								</div>
+							</div>
+							<div class='timeline-marker'>
+								<p>Date</p>
+							</div>
 						</div>
 					</div>
 
 					<div class='about-timeline-row-left'>
 						<div>
-							<div class='timeline-widget'></div>
+							<div class='timeline-widget'>
+								<div class='timeline-image'></div>
+								<div class='timeline-bottom'>
+									<p>We will put something here about the business. This is a placeholder text right now</p>
+								</div>
+							</div>
 							<div class='timeline-horizontal-line'></div>
 							<div class='timeline-marker'></div>
 						</div>
@@ -100,14 +119,24 @@
 					<div class='about-timeline-row-right'>
 						<div>
 							<div class='timeline-horizontal-line'></div>						
-							<div class='timeline-widget'></div>
+							<div class='timeline-widget'>
+								<div class='timeline-image'></div>
+								<div class='timeline-bottom'>
+									<p>We will put something here about the business. This is a placeholder text right now</p>
+								</div>
+							</div>
 							<div class='timeline-marker'></div>
 						</div>
 					</div>
 
 					<div class='about-timeline-row-left'>
 						<div>
-							<div class='timeline-widget'></div>
+							<div class='timeline-widget'>
+								<div class='timeline-image'></div>
+								<div class='timeline-bottom'>
+									<p>We will put something here about the business. This is a placeholder text right now</p>
+								</div>
+							</div>
 							<div class='timeline-horizontal-line'></div>
 							<div class='timeline-marker'></div>
 						</div>
@@ -116,7 +145,12 @@
 					<div class='about-timeline-row-right'>
 						<div>
 							<div class='timeline-horizontal-line'></div>						
-							<div class='timeline-widget'></div>
+							<div class='timeline-widget'>
+								<div class='timeline-image'></div>
+								<div class='timeline-bottom'>
+									<p>We will put something here about the business. This is a placeholder text right now</p>
+								</div>
+							</div>
 							<div class='timeline-marker'></div>
 						</div>
 					</div>
@@ -124,44 +158,78 @@
 
 				<div class='about-timeline-small'>
 					<div>
-						<div class='timeline-marker'></div>
+						<div class='timeline-marker'>
+							<p>Date</p>
+						</div>
 						<div class='timeline-vertical-line'></div>
-						<div class='timeline-widget'></div>
+						<div class='timeline-widget'>
+							<img src='../static/images/store1.png' class='timeline-image'>
+							<div class='timeline-bottom'>
+								<p>We will put something here about the business. This is a placeholder text right now</p>
+							</div>
+						</div>
+						<div class='timeline-vertical-line'></div>
+					</div>
+
+					<div>
+						<div class='timeline-marker'>
+							<p>Date</p>
+						</div>
+						<div class='timeline-vertical-line'></div>
+						<div class='timeline-widget'>
+							<img src='../static/images/store2.png' class='timeline-image'>
+							<div class='timeline-bottom'>
+								<p>We will put something here about the business. This is a placeholder text right now</p>
+							</div>									
+						</div>
 						<div class='timeline-vertical-line'></div>
 					</div>
 
 					<div>
 						<div class='timeline-marker'></div>
 						<div class='timeline-vertical-line'></div>
-						<div class='timeline-widget'></div>
+						<div class='timeline-widget'>
+							<div class='timeline-image'></div>
+							<div class='timeline-bottom'>
+								<p>We will put something here about the business. This is a placeholder text right now</p>
+							</div>
+						</div>
 						<div class='timeline-vertical-line'></div>
 					</div>
 
 					<div>
 						<div class='timeline-marker'></div>
 						<div class='timeline-vertical-line'></div>
-						<div class='timeline-widget'></div>
+						<div class='timeline-widget'>
+							<div class='timeline-image'></div>
+							<div class='timeline-bottom'>
+								<p>We will put something here about the business. This is a placeholder text right now</p>
+							</div>
+						</div>
 						<div class='timeline-vertical-line'></div>
 					</div>
 
 					<div>
 						<div class='timeline-marker'></div>
 						<div class='timeline-vertical-line'></div>
-						<div class='timeline-widget'></div>
+						<div class='timeline-widget'>
+							<div class='timeline-image'></div>
+							<div class='timeline-bottom'>
+								<p>We will put something here about the business. This is a placeholder text right now</p>
+							</div>
+						</div>
 						<div class='timeline-vertical-line'></div>
 					</div>
 
 					<div>
 						<div class='timeline-marker'></div>
 						<div class='timeline-vertical-line'></div>
-						<div class='timeline-widget'></div>
-						<div class='timeline-vertical-line'></div>
-					</div>
-
-					<div>
-						<div class='timeline-marker'></div>
-						<div class='timeline-vertical-line'></div>
-						<div class='timeline-widget'></div>
+						<div class='timeline-widget'>
+							<div class='timeline-image'></div>
+							<div class='timeline-bottom'>
+								<p>We will put something here about the business. This is a placeholder text right now</p>
+							</div>
+						</div>
 						<div class='timeline-vertical-line last'></div>
 					</div>
 				</div>
@@ -185,6 +253,8 @@
 				</div>
 			</section>
 		</main>
+
+		<% include ../shared/footer %>
 
 		<script src='../vendors/three.min.js'></script>
 		<script src='../index.js'></script>
