Almost finished with the styles for the about page and started working on the button ripple effects

--- a/public/static/sass/views/pages/about/timeline.sass
+++ b/public/static/sass/views/pages/about/timeline.sass
@@ -43,19 +43,20 @@
 			border: none
 
 	.timeline-widget
-		height:  230px
+		height:  300px
 		width: 85%
 		margin: 0 auto
 		background: rgba(0,0,0,0.4)
 
 	.timeline-image
-		height: 50%
+		height: 70%
 		width: 100%
 
 	.timeline-bottom
 		display: flex
 		align-items: center
 		justify-content: flex-start
+		height: 30%
 		padding-left: 10px
 
 		p
@@ -96,6 +97,16 @@
 		.timeline-widget
 			width: 65%
 			height: 340px
+
+@media screen and (min-width: 1000px)
+	.about-timeline-small
+		.timeline-marker
+			height: 130px
+			width: 130px
+
+		.timeline-widget
+			width: 50%
+			height: 380px
 
 @media screen and (min-width: 1200px)
 	.about-timeline-small
