--- a/public/views/about/about.ejs
+++ b/public/views/about/about.ejs
@@ -106,13 +106,15 @@
 					<div class='about-timeline-row-left'>
 						<div>
 							<div class='timeline-widget'>
-								<div class='timeline-image'></div>
+								<img src='../static/images/store3.png' class='timeline-image'>
 								<div class='timeline-bottom'>
 									<p>We will put something here about the business. This is a placeholder text right now</p>
 								</div>
 							</div>
 							<div class='timeline-horizontal-line'></div>
-							<div class='timeline-marker'></div>
+							<div class='timeline-marker'>
+								<p>Date</p>
+							</div>
 						</div>
 					</div>
 
@@ -186,10 +188,12 @@
 					</div>
 
 					<div>
-						<div class='timeline-marker'></div>
+						<div class='timeline-marker'>
+							<p>Date</p>
+						</div>
 						<div class='timeline-vertical-line'></div>
 						<div class='timeline-widget'>
-							<div class='timeline-image'></div>
+							<img src='../static/images/store3.png' class='timeline-image'>
 							<div class='timeline-bottom'>
 								<p>We will put something here about the business. This is a placeholder text right now</p>
 							</div>
@@ -198,10 +202,12 @@
 					</div>
 
 					<div>
-						<div class='timeline-marker'></div>
+						<div class='timeline-marker'>
+							<p>Date</p>
+						</div>
 						<div class='timeline-vertical-line'></div>
 						<div class='timeline-widget'>
-							<div class='timeline-image'></div>
+							<img src='../static/images/store4.png' class='timeline-image'>
 							<div class='timeline-bottom'>
 								<p>We will put something here about the business. This is a placeholder text right now</p>
 							</div>
@@ -210,10 +216,12 @@
 					</div>
 
 					<div>
-						<div class='timeline-marker'></div>
+						<div class='timeline-marker'>
+							<p>Date</p>
+						</div>
 						<div class='timeline-vertical-line'></div>
 						<div class='timeline-widget'>
-							<div class='timeline-image'></div>
+							<img  src='../static/images/store5.png' class='timeline-image'>
 							<div class='timeline-bottom'>
 								<p>We will put something here about the business. This is a placeholder text right now</p>
 							</div>
@@ -222,10 +230,12 @@
 					</div>
 
 					<div>
-						<div class='timeline-marker'></div>
+						<div class='timeline-marker'>
+							<p>Date</p>
+						</div>
 						<div class='timeline-vertical-line'></div>
 						<div class='timeline-widget'>
-							<div class='timeline-image'></div>
+							<img src='../static/images/store1.png' class='timeline-image'>
 							<div class='timeline-bottom'>
 								<p>We will put something here about the business. This is a placeholder text right now</p>
 							</div>
