--- a/public/static/sass/views/pages/about/media.sass
+++ b/public/static/sass/views/pages/about/media.sass
@@ -111,10 +111,14 @@
 			height: 80px
 			width: 80px
 
+	.video-controls
+		width: 85%
+		margin: 0 5% 0 10%
+
 @media screen and (min-width: 800px)
 	.video-controls
-		width: 70%
-		margin: 0 auto
+		width: 75%
+		margin: 0 8% 0 17%
 
 @media screen and (min-width: 870px)
 	.about-media
@@ -139,6 +143,11 @@
 		> div
 			height: 95px
 			width: 95px
+
+@media screen and (min-width: 1000px)
+	.video-controls
+		width: 70%
+		margin: 0 11% 0 19%
 
 @media screen and (min-width: 1200px)
 	.about-media
@@ -167,3 +176,10 @@
 	.about-media-video
 		flex-basis: 48%
 		height: 500px
+
+	.about-video
+		height: 350px
+
+	.video-controls
+		width: 95%
+		margin: 0 auto
