Finished the styles for now on the about page and added a scrolling slide in plugin for the timeline

--- a/public/static/sass/views/pages/about/today.sass
+++ b/public/static/sass/views/pages/about/today.sass
@@ -82,6 +82,19 @@
 	.staff-image
 		height: 300px
 
+@media screen and (min-width: 1200px)
+	.about-today
+		padidng: 130px 0
+
+		h2
+			font-size: 45px
+
+	.staff
+		width: 50%
+
+	.staff-image
+		height: 300px
+
 @media screen and (min-width: 1350px)
 	.about-today-staff
 		flex-direction: row
