--- a/public/views/about/about.ejs
+++ b/public/views/about/about.ejs
@@ -72,90 +72,57 @@
 
 			<section class='about-timeline'>
 				<div class='about-timeline-large'>
-					<div class='about-timeline-row-left'>
-						<div>
-							<div class='timeline-widget'>
+					<ul class='timeline-list'>
+						<li>
+							<div class='timeline-marker'>
+								<p>Date</p>
+							</div>
+							<div class='timeline-item'>
 								<img src='../static/images/store1.png' class='timeline-image'>
-								<div class='timeline-bottom'>
-									<p>We will put something here about the business. This is a placeholder text right now</p>
-								</div>
+								<p>We will put something here about the business, this is a placeholder text</p>
 							</div>
-							<div class='timeline-horizontal-line'></div>
+						</li>
+
+						<li>
 							<div class='timeline-marker'>
 								<p>Date</p>
 							</div>
-							<div class='timeline-vertical-line'></div>
-						</div>
-					</div>
-
-					<div class='about-timeline-row-right'>
-						<div>
-							<div class='timeline-horizontal-line'></div>						
-							<div class='timeline-widget'>
+							<div class='timeline-item'>
 								<img src='../static/images/store2.png' class='timeline-image'>
-								<div class='timeline-bottom'>
-									<p>We will put something here about the business. This is a placeholder text right now</p>
-								</div>
+								<p>We will put somethinghere about the business, this is a placeholder text</p>
 							</div>
+						</li>
+
+						<li>
 							<div class='timeline-marker'>
 								<p>Date</p>
 							</div>
-						</div>
-					</div>
-
-					<div class='about-timeline-row-left'>
-						<div>
-							<div class='timeline-widget'>
+							<div class='timeline-item'>
 								<img src='../static/images/store3.png' class='timeline-image'>
-								<div class='timeline-bottom'>
-									<p>We will put something here about the business. This is a placeholder text right now</p>
-								</div>
+								<p>We will put somethinghere about the business, this is a placeholder text</p>
 							</div>
-							<div class='timeline-horizontal-line'></div>
+						</li>
+
+						<li>
 							<div class='timeline-marker'>
 								<p>Date</p>
 							</div>
-						</div>
-					</div>
-
-					<div class='about-timeline-row-right'>
-						<div>
-							<div class='timeline-horizontal-line'></div>						
-							<div class='timeline-widget'>
-								<div class='timeline-image'></div>
-								<div class='timeline-bottom'>
-									<p>We will put something here about the business. This is a placeholder text right now</p>
-								</div>
+							<div class='timeline-item'>
+								<img src='../static/images/store4.png' class='timeline-image'>
+								<p>We will put somethinghere about the business, this is a placeholder text</p>
 							</div>
-							<div class='timeline-marker'></div>
-						</div>
-					</div>
+						</li>
 
-					<div class='about-timeline-row-left'>
-						<div>
-							<div class='timeline-widget'>
-								<div class='timeline-image'></div>
-								<div class='timeline-bottom'>
-									<p>We will put something here about the business. This is a placeholder text right now</p>
-								</div>
+						<li>
+							<div class='timeline-marker'>
+								<p>Date</p>
 							</div>
-							<div class='timeline-horizontal-line'></div>
-							<div class='timeline-marker'></div>
-						</div>
-					</div>
-
-					<div class='about-timeline-row-right'>
-						<div>
-							<div class='timeline-horizontal-line'></div>						
-							<div class='timeline-widget'>
-								<div class='timeline-image'></div>
-								<div class='timeline-bottom'>
-									<p>We will put something here about the business. This is a placeholder text right now</p>
-								</div>
+							<div class='timeline-item'>
+								<img src='../static/images/store5.png' class='timeline-image'>
+								<p>We will put somethinghere about the business, this is a placeholder text</p>
 							</div>
-							<div class='timeline-marker'></div>
-						</div>
-					</div>
+						</li>
+					</ul>
 				</div>
 
 				<div class='about-timeline-small'>
