--- a/public/static/sass/views/pages/about/timeline.sass
+++ b/public/static/sass/views/pages/about/timeline.sass
@@ -116,8 +116,8 @@
 
 			
 		.timeline-widget
-			width: 55%
-			height: 370px
+			width: 45%
+			height: 420px
 
 @media screen and (min-width: 1350px)
 	.about-timeline-small
@@ -130,82 +130,89 @@
 		width: 90%
 		margin: 0 auto
 
-	.about-timeline-row-left
-		position: relative
-		display: flex
-		align-items: center
-		justify-content: flex-start
-		width: 100%
+	.timeline-list
+		li
+			position: relative
+			width: 2px
+			margin: 0 auto
+			padding-top: 50px
+			background: #a0b3b0
+			list-style-type: none
 
-		> div
-			display: flex
-			width: 50%
-			align-items: center
+			.timeline-marker
+				display: flex
+				align-items: center
+				justify-content: center
+				position: absolute
+				left: 50%
+				bottom: 33%
+				content: ''
+				width: 100px
+				height: 100px
+				border-radius: 50%
+				background: #1aba88
+				transform: translateX(-50%)
+				z-index: 9999
 
-		.timeline-widget
-			height: 250px
-			width: 48%
-			background: rgba(0,0,0,0.23)
+				p
+					@include lato()
+					font-weight: 300
+					font-size: 18px
+					letter-spacing: 2px
+					color: #fff
 
-		.timeline-horizontal-line
-			width: calc(36% + 50px)
-			border-bottom: 1px solid rgba(0,0,0,0.12)
-			z-index: 1
+			.timeline-item
+				position: relative
+				bottom: 0
+				padding: 20px 15px
+				width: 400px
+				background: #fff
+				visibility: hidden
+				opacity: 0
+				transition: all .4s ease-in-out
 
-		.timeline-marker
-			position: absolute
-			top: 50%
-			right: 50%
-			height: 100px
-			width: 100px
-			overflow: hidden
-			border-radius: 50%
-			background: #666
-			transform: translate3D(50%, -50%, 0)
-			z-index: 2
+				img
+					width: 100%
+					max-width: 100%
 
-		.timeline-vertical-line
-			position: absolute
-			top: 50%
-			left: 0
-			width: 100%
-			height: 1px
-			border-top: 1px solid rgba(0,0,0,0.12)
-			transform: rotate(90deg) translateX(50%)
-			z-index: 1
+				&:before
+					position: absolute
+					bottom: 50%
+					content: ''
+					width: 0
+					height: 0
+					border-style: solid
 
+				p
+					@include open()
+					font-weight: noraml
+					font-size: 16px
+					letter-spacing: 2px
+					line-height: 23px
+					margin-top: 15px
 
-	.about-timeline-row-right
-		position: relative
-		display: flex
-		align-items: center
-		justify-content: flex-end
-		width: 100%
+			&:nth-child(odd)
+				.timeline-item
+					left: 240px
+					transform: translate3d(200px, 0, 0)
 
-		> div
-			display: flex
-			width: 50%
-			align-items: center
+					&:before
+						left: -195px
+						width: 195px
+						border-bottom: 2px solid #a0b3b0
 
-		.timeline-widget
-			height: 250px
-			width: 48%
-			background: rgba(0,0,0,0.23)
+			&:nth-child(even)
+				.timeline-item
+					left: -620px
+					transform: translate3d(-200px, 0, 0)
 
-		.timeline-marker
-			position: absolute
-			top: 50%
-			right: 50%
-			height: 100px
-			width: 100px
-			overflow: hidden
-			border-radius: 50%
-			background: #666
-			transform: translate3D(50%, -50%, 0)
-			z-index: 2
+					&:before
+						right: -195px
+						width: 195px
+						border-bottom: 2px solid #a0b3b0
 
-		.timeline-horizontal-line
-			width: calc(36% + 50px)
-			border-bottom: 1px solid rgba(0,0,0,0.12)
-
-
+			&.in-view
+				.timeline-item
+					transform: none
+					visibility: visible
+					opacity: 1 
