Added some more form styles

--- a/public/static/sass/views/pages/contact/form.sass
+++ b/public/static/sass/views/pages/contact/form.sass
@@ -109,6 +109,26 @@
 				font-size: 14px
 				color: #1aba88
 
+	&.input-valid
+		label
+			transform: translateY(-38px)
+			font-size: 14px
+			color: #1aba88
+
+		.bar:before,
+		.bar:after
+			width: 50%
+
+		textarea
+			border-color: #1aba88
+
+	&.input-invalid
+		label
+			transform: translateY(-38px)
+			font-size: 14px
+
+
+
 
 .form-submit
 	display: flex
