--- a/public/views/about/about.ejs
+++ b/public/views/about/about.ejs
@@ -11,6 +11,7 @@
 
 	<body>
 		<% include ../shared/nav %>
+		<% include ../shared/offside %>
 
 		<main class='about-page-container'>
 			<section class='about-header'>
