--- a/public/views/contact/contact.ejs
+++ b/public/views/contact/contact.ejs
@@ -150,6 +150,7 @@
 
 		<% include ../shared/footer %>
 
+		<script src='../vendors/three.min.js'></script>
 		<script src='../index.js'></script>
 	</body>
 </html>
