Final commit for now. Rehosting this to show client progress

--- a/public/static/sass/views/pages/contact/form.sass
+++ b/public/static/sass/views/pages/contact/form.sass
@@ -126,6 +126,15 @@
 		label
 			transform: translateY(-38px)
 			font-size: 14px
+			color: #fd5a60
+
+		.bar:before,
+		.bar:after
+			width: 50%
+			background: #fd5a60
+
+		textarea
+			border-color: #fd5a60
 
 
 
