--- a/public/index.ejs
+++ b/public/index.ejs
@@ -7,6 +7,7 @@
 		<link rel='stylesheet' href='./static/icons/style.css'>
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,400|Open+Sans:400,600" rel="stylesheet">
 		<link rel='stylesheet' href='./styles/main.min.css'>
+
 	</head>
 
 	<body>
@@ -22,6 +23,7 @@
 
 		<% include ./views/shared/footer %>
 
-		<script src='./index.js'></script>
+		<script src='./vendors/three.min.js'></script>
+		<script src='./scripts/index.min.js'></script>
 	</body>
 </html>
