--- a/public/views/contact/contact.ejs
+++ b/public/views/contact/contact.ejs
@@ -151,6 +151,6 @@
 		<% include ../shared/footer %>
 
 		<script src='../vendors/three.min.js'></script>
-		<script src='../index.js'></script>
+		<script src='../scripts/index.min.js'></script>
 	</body>
 </html>
